# AdventOfCode

./: pyproject.toml
2022/: processing.py
