[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["MJ-Arthur <arthur.nazarian@my-jewellery.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
